--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,18 @@ ADD-PROFILE-PICTURE.md
 ADD-PROJECT-IMAGES.md
 README-portfolio.md
 
-# 
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Dependencies
+node_modules/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+#
